--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,14 @@
 asgiref==3.8.1
 crispy-bootstrap4==2024.1
+dj-database-url==2.1.0
 Django==5.0.4
 django-allauth==0.62.1
 django-crispy-forms==2.1
+django-heroku==0.3.1
+gunicorn==22.0.0
+packaging==24.0
 pillow==10.3.0
+psycopg2==2.9.9
 sqlparse==0.5.0
+typing_extensions==4.11.0
+whitenoise==6.6.0
